@@ -1,16 +1,19 @@
 [12.1.0]
-  * Reimplemented rcsslogplayer using Qt4. Please note that Qt 4.2.0
+  * Reimplemented rcsslogplayer using Qt4. Please note that Qt 4.1.0
     or later is required to build the new logplayer. You can disable
     to build the new logplayer with './configure --disable-qt4'.
     The new logplayer supports qmake build system. If you have
-    troubles with the configure script on Mac OS X, please try
-    'qmake && make'.
+    troubles with Makefile generated by the configure script, please
+    try 'qmake && make'.
 
   * The new logplayer supports the standalone mode. Now, rcsslogplayer
-    can replay and show the game logs without rcssmonitor.
+    can show the game status without rcssmonitor.
 
   * Renamed old logplayer to rcsslogplayer_classic.  You can disable
     the classic logplayer with 'configure --disable-classic'.
+
+  * Now, rcsslogplayer can be used as a simple monitor client. This
+    also means that rcsslogpalyer can be used as a simple proxy server.
 
   * Reimplemented rcgparser library.
 
